tests/e2e/mutation_any_invalid5.story
a = {}
b = a[0]
c = b contains i:0
